[profile.release]
panic = 'unwind'

[workspace]
members = [
    'node',
    "primitives",
    'runtime',
    'modules/cloverdex',
    'modules/evm-accounts',
    'modules/reward-pool',
    'modules/incentives',
    'modules/traits',
]

[patch.crates-io]
frame-benchmarking = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82"  }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82"  }
frame-executive = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82"  }
frame-support = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82"  }
frame-system = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82"  }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82"  }
pallet-authorship = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82"  }
pallet-babe = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82"  }
pallet-balances = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82"  }
pallet-bounties = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82"  }
pallet-collective = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82"  }
pallet-contracts = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82"  }
pallet-contracts-primitives = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82"  }
pallet-contracts-rpc = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82"  }
pallet-contracts-rpc-runtime-api = { git = "https://github.com/paritytech/substrate.git", rev = "1d5d13a82" }
pallet-democracy = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82"  }
pallet-elections-phragmen = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82"  }
pallet-grandpa = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82"  }
pallet-im-online = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82"  }
pallet-indices = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82"  }
pallet-membership = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82"  }
pallet-offences = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82"  }
pallet-randomness-collective-flip = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82"  }
pallet-scheduler = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82"  }
pallet-session = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82"  }
pallet-staking = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82"  }
pallet-staking-reward-curve = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82"  }
pallet-sudo = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82"  }
pallet-timestamp = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82"  }
pallet-tips = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82"  }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82"  }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82"  }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82"  }
pallet-treasury = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82"  }
pallet-utility = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82"  }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82"  }
sc-chain-spec = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82"  }
sc-cli = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82"  }
sc-client-api = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82"  }
sc-client-db = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82"  }
sc-consensus = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82"  }
sc-consensus-babe = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82"  }
sc-consensus-babe-rpc = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82"  }
sc-consensus-slots = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82"  }
sc-consensus-epochs = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82"  }
sc-executor = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82"  }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82"  }
sc-finality-grandpa-rpc = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82"  }
sc-informant = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82"  }
sc-keystore = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82"  }
sc-network = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82"  }
sc-offchain = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82"  }
sc-rpc = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82"  }
sc-rpc-api = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82"  }
sc-service = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82"  }
sc-telemetry = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82"  }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82"  }
sp-api = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82"  }
sp-application-crypto = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82"  }
sp-arithmetic = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82"  }
sp-block-builder = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82"  }
sp-blockchain = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82"  }
sp-consensus = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82"  }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82"  }
sp-core = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82"  }
sp-externalities = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82"  }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82"  }
sp-inherents = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82"  }
sp-io = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82"  }
sp-keystore = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82"  }
sp-offchain = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82"  }
sp-rpc = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82"  }
sp-runtime = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82"  }
sp-runtime-interface = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82"  }
sp-sandbox = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82"  }
sp-session = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82"  }
sp-staking = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82"  }
sp-std = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82"  }
sp-storage = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82"  }
sp-timestamp = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82"  }
sp-tracing = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82"  }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82"  }
sp-trie = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82"  }
sp-version = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82"  }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82"  }
sp-runtime-interface-proc-macro = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82"  }