[package]
name = 'clover'
authors = ['Clover Network <https://github.com/clover-network>']
build = 'build.rs'
description = 'Clover node'
edition = '2018'
license = 'GPL-3.0'
homepage = 'https://cloverdefi.com'
repository = 'https://github.com/clover-network/clover'
version = '0.9.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[[bin]]
name = 'clover'

[dependencies]
primitives = { package = 'clover-primitives', path = '../primitives', version = '0.9.0'}
clover-runtime = {path = '../runtime', version = '0.9.0' }
clover-rpc = {default-features = false, version = '0.9.0', package = 'clover-rpc', path = '../rpc' }

jsonrpc-core = '15.0.0'
jsonrpc-pubsub = "15.0.0"
structopt = '0.3.8'
serde_json = "1.0"

pallet-contracts = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82", default-features = false }
pallet-contracts-rpc = { version = "0.8.0" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82" }
sc-basic-authorship = { version = '0.8.0' }
sc-cli = { version = "0.8.0" }
sc-client-api = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82" }
sc-consensus = { version = '0.8.0' }
sc-consensus-babe = { version = '0.8.0' }
sc-consensus-babe-rpc = { version = '0.8.0' }
sc-consensus-epochs = { version = "0.8.0" }
sc-consensus-slots = { version = "0.8.0" }
sc-finality-grandpa-rpc = { version = "0.8.0" }
sc-finality-grandpa = { version = '0.8.0' }
sc-executor = {features = ['wasmtime'], version = '0.8.0' }
sc-keystore = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82" }
sp-keystore = { git = "https://github.com/paritytech/substrate.git", rev = "1d5d13a82" }
sc-network = { version = '0.8.0' }
sc-rpc = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82" }
sc-rpc-api = { version = '0.8.0' }
sc-service = { features = ['wasmtime'], version = "0.8.0" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82" }
sp-api = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82" }
sp-block-builder = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82" }
sp-blockchain = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82" }
sp-consensus = { version = '0.8.0' }
sp-consensus-babe = { version = '0.8.0' }
sp-core = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82" }
sp-inherents = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82" }
hex-literal = { version = '0.3.1' }
sc-telemetry = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82" }
clover-evm = { path = "../modules/clover-evm" }
clover-ethereum = { path = "../modules/clover-ethereum" }
fc-rpc = { path = "../rpc/client/rpc" }
fp-rpc = { path = "../primitives/rpc" }
fc-consensus = { path = "../rpc/client/consensus" }
primitive-types = { version = "0.8", default-features = false, features = ["rlp", "byteorder"] }

[build-dependencies.substrate-build-script-utils]
version = "2.0.1"
