[package]
name = 'clover'
authors = ['Clover Network <https://github.com/clover-network>']
build = 'build.rs'
description = 'Clover node'
edition = '2018'
license = 'GPL-3.0'
homepage = 'https://cloverdefi.com'
repository = 'https://github.com/clover-network/clover'
version = '0.9.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[[bin]]
name = 'clover'

[dependencies]
primitives = { package = 'clover-primitives', path = '../primitives', version = '0.9.0'}
clover-runtime = {path = '../runtime', version = '0.9.0' }
clover-rpc = {default-features = false, version = '0.9.0', package = 'clover-rpc', path = '../rpc' }

jsonrpc-core = '15.0.0'
jsonrpc-pubsub = "15.0.0"
log = "0.4.13"
structopt = '0.3.8'
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

pallet-contracts = { git = "https://github.com/paritytech/substrate.git",  branch = "rococo-v1" , default-features = false }
pallet-contracts-rpc = { version = "0.8.0" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate.git",  branch = "rococo-v1"  }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate.git",  branch = "rococo-v1"  }
sc-cli = { git = "https://github.com/paritytech/substrate.git",  branch = "rococo-v1"  }
sc-client-api = { git = "https://github.com/paritytech/substrate.git",  branch = "rococo-v1"  }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sc-consensus = { git = "https://github.com/paritytech/substrate.git",  branch = "rococo-v1"  }
sc-consensus-babe = { git = "https://github.com/paritytech/substrate.git",  branch = "rococo-v1"  }
sc-consensus-babe-rpc = { git = "https://github.com/paritytech/substrate.git",  branch = "rococo-v1"  }
sc-consensus-epochs = { git = "https://github.com/paritytech/substrate.git",  branch = "rococo-v1"  }
sc-consensus-slots = { git = "https://github.com/paritytech/substrate.git",  branch = "rococo-v1"  }
sc-finality-grandpa-rpc = { git = "https://github.com/paritytech/substrate.git",  branch = "rococo-v1"  }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate.git",  branch = "rococo-v1"  }
sc-executor = {features = ['wasmtime'], git = "https://github.com/paritytech/substrate.git",  branch = "rococo-v1"  }
sc-keystore = { git = "https://github.com/paritytech/substrate.git",  branch = "rococo-v1"  }
sp-keystore = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
sc-network = { git = "https://github.com/paritytech/substrate.git",  branch = "rococo-v1"  }
sc-rpc = { git = "https://github.com/paritytech/substrate.git",  branch = "rococo-v1"  }
sc-rpc-api = { git = "https://github.com/paritytech/substrate.git",  branch = "rococo-v1"  }
sc-service = { git = "https://github.com/paritytech/substrate.git",  branch = "rococo-v1"  }
sc-tracing = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate.git",  branch = "rococo-v1"  }
sc-transaction-graph = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-api = { git = "https://github.com/paritytech/substrate.git",  branch = "rococo-v1"  }
sp-block-builder = { git = "https://github.com/paritytech/substrate.git",  branch = "rococo-v1"  }
sp-blockchain = { git = "https://github.com/paritytech/substrate.git",  branch = "rococo-v1"  }
sp-consensus = { git = "https://github.com/paritytech/substrate.git",  branch = "rococo-v1"  }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate.git",  branch = "rococo-v1"  }
sp-core = { git = "https://github.com/paritytech/substrate.git",  branch = "rococo-v1"  }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate.git",  branch = "rococo-v1"  }
sp-inherents = { git = "https://github.com/paritytech/substrate.git",  branch = "rococo-v1"  }
sp-runtime = { git = "https://github.com/paritytech/substrate.git",  branch = "rococo-v1"  }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate.git",  branch = "rococo-v1"  }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate.git",  branch = "rococo-v1"  }
hex-literal = { version = '0.3.1' }
sc-telemetry = { git = "https://github.com/paritytech/substrate.git",  branch = "rococo-v1"  }
clover-evm = { path = "../modules/clover-evm" }
clover-ethereum = { path = "../modules/clover-ethereum" }
fc-rpc = { path = "../rpc/client/rpc" }
fc-rpc-core = { path = "../rpc/client/rpc-core" }
fp-rpc = { path = "../primitives/rpc" }
fc-consensus = { path = "../rpc/client/consensus" }
primitive-types = { version = "0.9.0", default-features = false, features = ["rlp", "byteorder"] }

# Cumulus dependencies
cumulus-client-consensus-relay-chain = { git = 'https://github.com/paritytech/cumulus.git', branch = "rococo-v1" }
cumulus-client-collator = { git = 'https://github.com/paritytech/cumulus.git', branch = "rococo-v1" }
cumulus-client-network = { git = 'https://github.com/paritytech/cumulus.git', branch = "rococo-v1" }
cumulus-client-service = { git = 'https://github.com/paritytech/cumulus.git', branch = "rococo-v1" }
cumulus-primitives-core = { git = 'https://github.com/paritytech/cumulus.git', branch = "rococo-v1" }

# Polkadot dependencies
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "rococo-v1" }
polkadot-service = { git = "https://github.com/paritytech/polkadot", branch = "rococo-v1" }
polkadot-cli = { git = "https://github.com/paritytech/polkadot", branch = "rococo-v1" }
polkadot-test-service = { git = "https://github.com/paritytech/polkadot", branch = "rococo-v1" }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "rococo-v1" }


[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
