[package]
name = 'clover-runtime'
authors = ['Clover Network <https://github.com/clover-network>']
edition = '2018'
license = 'GPL-3.0'
homepage = 'https://cloverdefi.com'
repository = 'https://github.com/clover-network/clover'
version = '0.9.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
cloverdex = { path = "../modules/cloverdex", default-features = false }
clover-traits = { path = "../modules/traits", default-features = false }
reward-pool= { path = "../modules/reward-pool", default-features = false }
clover-incentives = { path = "../modules/incentives", default-features = false }
clover-prices = { path = "../modules/prices", default-features = false }
clover-loans = { path = "../modules/loans", default-features = false }
clover-rpc-runtime-api = { path = "../rpc/runtime-api", default-features = false }
clover-evm = { path = "../modules/clover-evm", default-features = false }
clover-ethereum = { path = "../modules/clover-ethereum", default-features = false }
fp-rpc = { path = "../primitives/rpc", default-features = false  }
evm-accounts = { path = "../modules/evm-accounts", default-features = false }
primitives = { default-features = false, package = 'clover-primitives', path = '../primitives', version = '0.9.0'}

enum-iterator = "0.6.0"
codec = {default-features = false, package = 'parity-scale-codec', version = '1.3.4' }
frame-executive = {default-features = false, git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82" }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82" }
frame-system = {default-features = false, git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82" }
frame-system-rpc-runtime-api = {default-features = false, git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82" }
pallet-authorship = {default-features = false, git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82" }
pallet-babe = {default-features = false, git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82" }
pallet-balances = {default-features = false, git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82" }
pallet-collective = {default-features = false, git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82" }
pallet-contracts = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82", default-features = false }
pallet-contracts-primitives = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82", default-features = false }
pallet-contracts-rpc-runtime-api = { version = "0.8.0", default-features = false }
pallet-grandpa = {default-features = false, git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82" }
pallet-im-online = { default-features = false, git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82" }
pallet-indices = {default-features = false, git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82" }
pallet-offences = { default-features = false, git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82" }
pallet-staking = {default-features = false, git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82" }
pallet-session = {default-features = false, features = ["historical"], git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82" }
pallet-randomness-collective-flip = {default-features = false, git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82" }
pallet-staking-reward-curve = {default-features = false, git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82" }
pallet-sudo = {default-features = false, git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82" }
pallet-timestamp = {default-features = false, git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82" }
pallet-transaction-payment = {default-features = false, git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82" }
pallet-transaction-payment-rpc-runtime-api = {default-features = false, git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82" }
serde = {features = ['derive'], optional = true, version = '1.0.101' }
sp-api = {default-features = false, git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82" }
sp-block-builder = {default-features = false, git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82" }
sp-consensus-babe = {default-features = false, version = '0.8.0' }
sp-core = {default-features = false, git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82" }
sp-inherents = {default-features = false, git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82" }
sp-offchain = {default-features = false, git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82" }
sp-runtime = {default-features = false, git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82" }
sp-session = {default-features = false, git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82" }
sp-staking = {default-features = false, git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82" }
sp-std = {default-features = false, git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82" }
sp-io = {default-features = false, git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82" }
sp-transaction-pool = {default-features = false, git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82" }
sp-version = {default-features = false, git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82" }
pallet-democracy = {default-features = false, git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82" }
pallet-elections-phragmen = {default-features = false, git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82" }
pallet-treasury = {default-features = false, git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82" }
pallet-membership = {default-features = false, git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82" }
pallet-scheduler = {default-features = false, git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82" }
pallet-utility = {default-features = false, git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82" }
frame-benchmarking = {default-features = false, git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82" }

orml-currencies = { default-features = false, path = "../orml/currencies" }
orml-tokens = {default-features = false, path = "../orml/tokens" }
orml-traits = {default-features = false, path = "../orml/traits" }
orml-oracle = {default-features = false, path = "../orml/oracle" }


[features]
default = ['std']
std = [
    'clover-rpc-runtime-api/std',
    'cloverdex/std',
    'codec/std',
    "frame-benchmarking/std",
    'frame-executive/std',
    'frame-support/std',
    'frame-system/std',
    'frame-system-rpc-runtime-api/std',
    'orml-currencies/std',
    'orml-tokens/std',
    'orml-traits/std',
    'orml-oracle/std',
    'pallet-authorship/std',
    'pallet-babe/std',
    'pallet-balances/std',
    "pallet-collective/std",
    "pallet-contracts-primitives/std",
    "pallet-contracts-rpc-runtime-api/std",
    "pallet-contracts/std",
    'pallet-grandpa/std',
    'pallet-im-online/std',
    'pallet-indices/std',
    'pallet-offences/std',
    'pallet-staking/std',
    'pallet-session/std',
    'pallet-randomness-collective-flip/std',
    'pallet-sudo/std',
    'pallet-timestamp/std',
    'pallet-transaction-payment/std',
    'pallet-transaction-payment-rpc-runtime-api/std',
    'serde',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-consensus-babe/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-staking/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
    'primitives/std',
    "pallet-democracy/std",
    "pallet-elections-phragmen/std",
    "pallet-treasury/std",
    "pallet-membership/std",
    "pallet-scheduler/std",
    "pallet-utility/std",
    "clover-evm/std",
    "clover-ethereum/std",
    "fp-rpc/std",
    "evm-accounts/std",
]

[build-dependencies.wasm-builder-runner]
package = 'substrate-wasm-builder-runner'
version = '1.0.5'
