[package]
name = "evm-accounts"
authors = ['Clover Network <https://github.com/clover-network>']
edition = '2018'
license = 'GPL-3.0'
homepage = 'https://cloverdefi.com'
repository = 'https://github.com/clover-network/clover'
version = '0.9.0'

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82", default-features = false }
libsecp256k1 = { version = "0.3.4", default-features = false, features = ["hmac"] }
sp-core = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82", default-features = false }
evm-primitives = { default-features = false, package = 'fp-evm', path = '../../primitives/evm', version = '0.9.0'}
orml-traits = { path = "../../orml/traits", default-features = false }
orml-utilities = { path = "../../orml/utilities", default-features = false }
impl-trait-for-tuples = "0.1.3"

[dev-dependencies]
pallet-balances = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82" }
orml-currencies = { path = "../../orml/currencies" }
orml-tokens = { path = "../../orml/tokens" }

[features]
default = ["std"]
std = [
	"codec/std",
	"libsecp256k1/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-io/std",
	"sp-std/std",
	"frame-support/std",
	"frame-system/std",
	"evm-primitives/std",
]
