[package]
name = 'clover-prices'
authors = ['Clover Network <https://github.com/clover-network>']
edition = '2018'
license = 'GPL-3.0'
homepage = 'https://cloverdefi.com'
repository = 'https://github.com/clover-network/clover'
version = '0.9.0'

[dependencies]
clover-traits = { path = "../traits", default-features = false }
primitives = { default-features = false, package = 'clover-primitives', path = '../../primitives', version = '0.9.0'}

serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "1.3", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate.git",  branch = "rococo-v1" , default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate.git",  branch = "rococo-v1" , default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate.git",  branch = "rococo-v1" , default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate.git",  branch = "rococo-v1" , default-features = false }

orml-traits = {default-features = false, path = "../../orml/traits"}
orml-utilities = {default-features = false, path = "../../orml/utilities" }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate.git",  branch = "rococo-v1" , default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate.git",  branch = "rococo-v1" , default-features = false }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"sp-std/std",
	"orml-traits/std",
	"orml-utilities/std",
	'primitives/std',
]
