[package]
name = "orml-oracle-rpc"
version = "0.3.3-dev"
authors = ["Laminar Developers <hello@laminar.one>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.0" }
jsonrpc-core = "15.0.0"
jsonrpc-core-client = "15.0.0"
jsonrpc-derive = "15.0.0"
sp-runtime = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82" }
sp-api = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82" }
sp-blockchain = { git = "https://github.com/paritytech/substrate.git",  rev = "1d5d13a82" }
orml-oracle-rpc-runtime-api = { path = "runtime-api" }
